sandbox/output
OneHundredDoors.java:1: error: cannot find symbol
import static Door.*;
              ^
  symbol: class Door
1 error
